--- a/main_experience.htm
+++ b/main_experience.htm
@@ -122,17 +122,23 @@ Projects as PI or Co-PI (Raised in total ~10.3 million EUR for my team):</span><
 	(Vice director): 7.85M &#8364; (Academy of Finland &amp; University of Oulu).</span></font></li>
 	<li>
 	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; line-height: 150%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-bottom: 0cm">
-	<font size="4"><span style="color: black">2022.01-2024.12: <b>Academy ICT 
-	2023 project</b>: ''<b>Trustable faces: Face data integrity against digital 
-	and physical attacks (TrustFace)</b>''. 653 792 &#8364;. (Co-PI: Assis. Prof. 
-	Xiaobai Li)</span></font></li>
-	<li>
-	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; margin-left: 21.0pt; margin-bottom: 0cm; line-height:150%; text-autospace:ideograph-numeric ideograph-other">
 	<font size="4"><span style="color: black">
 	2022.01-2025.12: <b>Infotech </b></span></font><b>
 	<span lang="EN-US" style="color: black">
 	<font size="4">spearhead</font></span></b><font size="4"><span style="color: black"><b> project</b>: <b>Towards Secure and 
 	Reliable Deep Learning Systems against Adversarial Attacks</b>. 336 000 &#8364;</span></font></li>
+	<li>
+	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; line-height: 150%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-bottom: 0cm">
+	<font size="4"><span style="color: black">2023.02-2025.02: FARIA (The 
+	Finnish-American Research &amp; Innovation Accelerator) project: <b>AI-assisted 
+	sundown syndrome detection in the Arctic region</b>. Funded by Ministry of 
+	Education and Culture of Finland. 85 000 &#8364;. </span></font></li>
+	<li>
+	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; line-height: 150%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-bottom: 0cm">
+	<font size="4"><span style="color: black">2022.01-2024.12: <b>Academy ICT 
+	2023 project</b>: ''<b>Trustable faces: Face data integrity against digital 
+	and physical attacks (TrustFace)</b>''. 653 792 &#8364;. (Co-PI: Assis. Prof. 
+	Xiaobai Li)</span></font></li>
 	<li>
 	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; margin-left: 21.0pt; margin-bottom: 0cm; line-height:150%; text-autospace:ideograph-numeric ideograph-other">
 	<font size="4">2022.03.01-2024.02.29: Mobility cooperation with India, China 
