--- a/teammembers.htm
+++ b/teammembers.htm
@@ -13,6 +13,8 @@ p
 	font-size:12.0pt;
 	font-family:"Times New Roman";
 	margin-left:0cm; margin-right:0cm; margin-top:0cm}
+span.contentpasted0
+	{}
 -->
 </style>
 </head>
@@ -30,9 +32,6 @@ p
 		and postdoctoral research fellows</span></u>:</b></font></td>
 	</tr>
 	<tr>
-		<td width="222" height="0" align="center" valign="top">
-		<p align="left" style="text-align: center">
-		<img border="0" src="Kevin.jpg" width="149" height="148"></td>
 		<td width="226" height="0" align="center" valign="top">
 		<img border="0" src="Jukka.png" width="112" height="148"></td>
 		<td height="0" align="center" valign="top" width="209">
@@ -40,11 +39,11 @@ p
 		<td height="0" align="center" valign="top" width="225">
 		<img border="0" src="Qianru.jpg" width="153" height="150"></td>
 		<td height="0" align="center" valign="top" width="222">
+		<img border="0" src="Yang.jpg" width="148" height="147"></td>
+		<td height="0" align="center" valign="top" width="222">
 		&nbsp;</td>
 	</tr>
 	<tr>
-		<td width="222" height="0" align="center" valign="top">
-		<font face="Times New Roman"><b>Dr. Kevin CHENG</b></font></td>
 		<td width="226" height="0" align="center" valign="top">
 		<font face="Times New Roman"><b>Dr. Jukka KOMULAINEN </b></font></td>
 		<td height="0" align="center" valign="top" width="209">
@@ -52,23 +51,23 @@ p
 		<td height="0" align="center" valign="top" width="225">
 		<font face="Times New Roman"><b>Dr. Qianru XU</b></font></td>
 		<td height="0" align="center" valign="top" width="222">
+		<font face="Times New Roman"><b>Dr. Yang LIU</b></font></td>
+		<td height="0" align="center" valign="top" width="222">
 		&nbsp;</td>
 	</tr>
 	<tr>
-		<td height="0" align="center" valign="top" width="222">
-		<img border="0" src="Yang.jpg" width="148" height="147"></td>
 		<td width="226" height="0" align="center" valign="top">
 		<img border="0" src="Haoyu.jpg"></td>
 		<td height="0" align="center" valign="top" width="209">
 		<img border="0" src="Yante.jpg"></td>
 		<td height="0" align="center" valign="top" width="225">
 		<img border="0" src="Muzammil.jpg" width="139" height="142"></td>
+		<td height="0" align="center" valign="top" width="225">
+		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="222">
 		&nbsp;</td>
 	</tr>
 	<tr>
-		<td height="0" align="center" valign="top" width="222">
-		<font face="Times New Roman"><b>Dr. Yang LIU</b></font></td>
 		<td width="226" height="0" align="center" valign="top">
 		<span lang="zh-cn"><b><font face="Times New Roman">Dr</font></b></span><b><font face="Times New Roman">. Haoyu CHEN</font></b></td>
 		<td height="0" align="center" valign="top" width="209">
@@ -76,6 +75,8 @@ p
 		<font face="Times New Roman"><span lang="zh-cn">Dr</span>. Yante LI</font></b></td>
 		<td height="0" align="center" valign="top" width="225">
 		<b><font face="Times New Roman">Dr. Muzammil BEHZAD</font></b></td>
+		<td height="0" align="center" valign="top" width="225">
+		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="222">
 		&nbsp;</td>
 	</tr>
@@ -86,8 +87,6 @@ p
 		candidates</span></u>:</b></font></td>
 	</tr>
 	<tr>
-		<td width="222" height="0" align="center" valign="top">
-		<img border="0" src="Henglin.jpg" width="130" height="141"></td>
 		<td width="226" height="0" align="center" valign="top">
 		<img border="0" src="Khanh.jpg" width="154" height="143"></td>
 		<td height="0" align="center" valign="top" width="209">
@@ -95,12 +94,11 @@ p
 		<td height="0" align="center" valign="top" width="225">
 		<img border="0" src="Tuomas.jpg"></td>
 		<td height="0" align="center" valign="top" width="225">
+		<img border="0" src="Xingxun.jpg" width="130" height="148"></td>
+		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
 	</tr>
 	<tr>
-		<td width="222" height="0" align="center" valign="top">
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
-		<font face="Times New Roman">Mr. Henglin SHI</font></b></td>
 		<td width="226" height="0" align="center" valign="top">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
 		<font face="Times New Roman">Mr. Khanh TRAN-THUONG</font></b></td>
@@ -111,6 +109,9 @@ p
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
 		<font face="Times New Roman">Mr. Tuomas VARANKA</font></b></td>
 		<td height="0" align="center" valign="top" width="225">
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
+		<font face="Times New Roman"><b>Mr. Xingxun JIANG</b></font></td>
+		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
 	</tr>
 	<tr>
@@ -120,8 +121,8 @@ p
 		<img border="0" src="Marko.jpg"></td>
 		<td height="0" align="center" valign="top" width="209">
 		<img border="0" src="Hui.jpg"></td>
-		<td height="0" align="center" valign="top" width="225">
-		&nbsp;</td>
+		<td height="0" align="center" valign="top" width="209">
+		　<img border="0" src="Lili.jpg" width="135" height="142"></td>
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
 	</tr>
@@ -133,9 +134,10 @@ p
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
 		<font face="Times New Roman">Mr. Marko SAVIC</font></b></td>
 		<td height="0" align="center" valign="top" width="209">
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b><font face="Times New Roman">M<span lang="zh-cn">s</span>. Hui ZHANG</font></b></td>
-		<td height="0" align="center" valign="top" width="225">
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">&nbsp;</td>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b><font face="Times New Roman">Ms. Hui ZHANG</font></b></td>
+		<td height="0" align="center" valign="top" width="209">
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
+		<b><font face="Times New Roman">　Ms. Lili LIU</font></b></td>
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
 	</tr>
@@ -166,25 +168,27 @@ p
 	<tr>
 		<td width="1112" height="0" align="center" valign="top" colspan="5">
 		<p align="left" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
+		<font face="Times New Roman" size="4"><b><u>Research Assistants:</u></b></font></td>
+	</tr>
+	<tr>
+		<td height="0" align="center" valign="top" width="225">
+		　<img border="0" src="Haotian.jpg"></td>
+		<td width="223" height="0" align="center" valign="top">
+		&nbsp;</td>
+		<td width="222" height="0" align="center" valign="top">
+		&nbsp;</td>
+		<td width="222" height="0" align="center" valign="top">
+		&nbsp;</td>
+		<td width="222" height="0" align="center" valign="top">
 		&nbsp;</td>
 	</tr>
 	<tr>
+		<td height="0" align="center" valign="top" width="225">
+		　<font face="Times New Roman"><b>Mr. Haotian LIU</b></font><p style="text-align: center">
+		<font face="Times New Roman">(Central South University): Jan. 2022-Dec. 
+		2022</font></td>
 		<td width="223" height="0" align="center" valign="top">
-		&nbsp;</td>
-		<td width="223" height="0" align="center" valign="top">
-		&nbsp;</td>
-		<td width="222" height="0" align="center" valign="top">
-		&nbsp;</td>
-		<td width="222" height="0" align="center" valign="top">
-		&nbsp;</td>
-		<td width="222" height="0" align="center" valign="top">
-		&nbsp;</td>
-	</tr>
-	<tr>
-		<td width="223" height="0" align="center" valign="top">
-		&nbsp;</td>
-		<td width="223" height="0" align="center" valign="top">
-		&nbsp;</td>
+		<font face="Times New Roman">Mr. Sheraz Khan </font></td>
 		<td width="222" height="0" align="center" valign="top">
 		&nbsp;</td>
 		<td width="222" height="0" align="center" valign="top">
@@ -198,32 +202,24 @@ p
 		<font face="Times New Roman" size="4"><b><u>Visiting researchers</u><span lang="en-us">:</span></b></font></td>
 	</tr>
 	<tr>
-		<td width="226" height="0" align="center" valign="top">
-		<img border="0" src="Xu.jpg" width="125" height="143"></td>
 		<td height="0" align="center" valign="top" width="209">
-		　<img border="0" src="Lili.jpg" width="135" height="142"></td>
+		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="225">
-		　<img border="0" src="Haotian.jpg"></td>
+		　</td>
+		<td height="0" align="center" valign="top" width="225">
+		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
 	</tr>
 	<tr>
-		<td width="226" height="0" align="center" valign="top">
-		<font face="Times New Roman"><b>Assoc. Prof. Xu CHENG </b>(Nanjing 
-		University of Information Science and Technology): July 2021 - 
-		<span lang="zh-cn">Nov</span>. 
-		2022</font></td>
 		<td height="0" align="center" valign="top" width="209">
-		　<font face="Times New Roman"><b>Ms. Lili LIU</b></font><p style="text-align: center">
-		<font face="Times New Roman">(Northwestern Polytechnic<span lang="en-us">
-		</span>University): Feb. 2022<span lang="zh-cn"> </span>-<span lang="zh-cn">
-		</span>Feb. 2024</font></td>
+		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="225">
-		　<font face="Times New Roman"><b>Mr. Haotian LIU</b></font><p style="text-align: center">
-		<font face="Times New Roman">(Central South University): Jan. 2022-Dec. 
-		2022</font></td>
+		　</td>
+		<td height="0" align="center" valign="top" width="225">
+		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="225">
@@ -232,17 +228,58 @@ p
 	</table>
 <p class="title" style="line-height: 150%; margin-top:1cm">
 <font size="4"><b>Past members:</b></font></p>
+<table border="0" width="40%">
+	<tr>
+		<td width="243" height="0" align="center" valign="top">
+		<img border="0" src="Henglin.jpg" width="130" height="141"></td>
+		<td height="0" align="center" valign="top" width="397">
+		<b><font face="Times New Roman">Dr. H</font></b><font face="Times New Roman"><b>englin S<span lang="zh-cn">hi</span></b></font><p>&nbsp;</p>
+		<p style="text-align: center"><span lang="zh-cn">Postdoctoral researcher</span></p>
+		<p style="text-align: center"><span lang="zh-cn">ATMOS, University of Oulu, Finland</span></p></td>
+	</tr>
+	<tr>
+		<td width="243" height="0" align="center" valign="top">
+		<p align="left" style="text-align: center">
+		<img border="0" src="Kevin.jpg" width="149" height="148"></td>
+		<td height="0" align="center" valign="top" width="397">
+		<b>Dr. Kevin Cheng</b><p>&nbsp;</p>
+		<p style="text-align: center">Imaging Algorithm Engineer<p>Huawei Technologies Oy (Finland) Co., Ltd.</td>
+	</tr>
+	<tr>
+		<td width="243" height="0" align="center" valign="top">
+		<img border="0" src="Muzammil.jpg" width="139" height="142"></td>
+		<td height="0" align="center" valign="top" width="397">
+		<b>Dr. Muzammil 
+	Behzad</b><p>&nbsp;</p>
+		<p style="text-align: center">AI scientist</p>
+		<p style="text-align: center">Silo.AI<span lang="en-us">, Helsinki</span></td>
+	</tr>
+	<tr>
+		<td width="243" height="0" align="center" valign="top">
+		<img border="0" src="Wei.jpg" width="140" height="142"></td>
+		<td height="0" align="center" valign="top" width="397">
+		<b><span lang="en-us">Dr. Wei Peng</span></b><p><span lang="en-us">&nbsp;</span></p>
+		<p style="text-align: center"><span lang="en-us">Postdoctoral researcher</span></p>
+		<p style="text-align: center"><span lang="en-us">&nbsp;</span>Stanford University<span lang="zh-cn">, USA</span></td>
+	</tr>
+	<tr>
+		<td width="243" height="0" align="center" valign="top">
+		<img border="0" src="Zitong.jpg" width="140" height="143"></td>
+		<td height="0" align="center" valign="top" width="397">
+		<b><span lang="en-us">Dr. Zitong 
+	Yu</span></b><p>&nbsp;</p>
+		<p style="text-align: center"><span lang="en-us">Postdoctoral researcher</span></p>
+		<p style="text-align: center">Nanyang Technological University<span lang="zh-cn">, 
+	Singapore</span></td>
+	</tr>
+	<tr>
+		<td width="243" height="0" align="center" valign="top">
+		&nbsp;</td>
+		<td height="0" align="center" valign="top" width="397">
+		　</td>
+	</tr>
+	</table>
 <ul>
-	<li>
-	<p class="title" style="line-height: 150%; "><span lang="en-us">Dr. Muzammil 
-	Behzad, </span>AI scientist<span lang="zh-cn">, </span>Silo.AI<span lang="en-us">, Helsinki</span></p></li>
-	<li>
-	<p class="title" style="line-height: 150%; "><span lang="en-us">Dr. Wei Peng, 
-	Postdoctoral researcher, </span>Stanford University<span lang="zh-cn">, USA</span></p></li>
-	<li>
-	<p class="title" style="line-height: 150%; "><span lang="en-us">Dr. Zitong 
-	Yu, Postdoctoral researcher, </span>Nanyang Technological University<span lang="zh-cn">, 
-	Singapore</span></p></li>
 	<li>
 	<p class="title" style="line-height: 150%; "><span lang="en-us">Dr. Xin Liu, Associate </span>Professor, Lappeenranta-Lahti University of Technology 
 	(LUT), Finland</p></li>
@@ -323,6 +360,15 @@ p
 <p class="title" style="line-height: 150%">
 <font face="Times New Roman" size="4"><b>Past visiting researchers:</b></font></p>
 <ul>
+	<li>
+	<font face="Times New Roman">Mr. Haotian LIU, (Central South University): Jan. 2022-Dec. 
+		2022</font></li>
+	<li>
+	<p class="title" style="line-height: 150%">
+		<font face="Times New Roman">Assoc. Prof. Xu CHENG (Nanjing 
+		University of Information Science and Technology): July 2021 - 
+		<span lang="zh-cn">Nov</span>. 
+		2022</font></li>
 	<li>
 	<p class="title" style="line-height: 150%">
 		<font face="Times New Roman">Dr. Yuhua FAN (Liaocheng University)<span lang="en-us">:
