--- a/publications.htm
+++ b/publications.htm
@@ -150,30 +150,41 @@ Jan. 2018.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
 <span lang="en-us"><font size="5"><b>2023</b></font></span></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
-<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;297. Zitong Yu, 
+<font face="Times New Roman" size="4">&nbsp;29<span lang="en-us">9</span>. Haoyu Chen, Henglin Shi, Xin 
+Liu, Xiaobai Li, <b>Guoying Zhao</b>. <u>SMG: A Micro-Gesture Dataset Towards 
+Spontaneous Body Gestures for Emotional Stress State Analysis</u>. International 
+Journal on Computer Vision (IJCV), 2023.</font></p>
+<p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
+<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;298. Zitong Yu, 
 Yunxiao Qin, Xiaobai Li, Chenxu Zhao, Zhen Lei, and <b>Guoying Zhao</b>. <u>Deep 
 Learning for Face Anti-Spoofing: A Survey</u>.&nbsp; </font></span>
 <font face="Times New Roman" size="4">IEEE Transactions on Pattern Analysis and 
 Machine Intelligence journal (TPAMI). 202<span lang="en-us">3</span>.</font></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
-<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;</span>29<span lang="en-us">6</span>. Xiaobai Li, Shiyang Cheng, Yante Li, Muzammil Behzad, 
+<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;</span>29<span lang="en-us">7</span>. Xiaobai Li, Shiyang Cheng, Yante Li, Muzammil Behzad, 
 Jie Shen, Stefanos Zafeiriou, Maja 
 Pantic, <b>Guoying Zhao</b>. <u>4DME: A spontaneous 4D micro-expression dataset 
 with multimodalities</u>. IEEE Transactions on Affective Computing, 202<span lang="en-us">3</span>.</font></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
-<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;2</span>9<span lang="en-us">5</span>. Yante 
+<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;2</span>9<span lang="en-us">6</span>. Yante 
 Li, Jinsheng Wei, Yang Liu, Janne Kauttonen<span lang="en-us">,</span> <b>Guoying Zhao</b>. <u>Deep 
 Learning for Micro-expression Recognition: A Survey</u>. IEEE Transactions on 
 Affective Computing, 202<span lang="en-us">3.</span></font></p>
 <p style="margin-top:6.0pt; margin-bottom:6.0pt; text-indent:-.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in" class="MsoPlainText">
-<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;294. </span>Yang 
+<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;295. </span>Yang 
 Liu, Xingming Zhang, Yante Li, Jinzhao Zhou, Xin Li, <b>Guoying Zhao</b><span lang="en-us">.
 <u>Graph-based Facial Affect Analysis: A Review</u>. </span>IEEE Transactions on 
 Affective Computing, 202<span lang="en-us">3</span>.</font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 115%; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;293. <b>Guoying Zhao</b>, Yante Li, 
+<font face="Times New Roman" size="4">&nbsp;29<span lang="en-us">4</span>. <b>Guoying Zhao</b>, Yante Li, 
 Qianru Xu. <u>From Emotion AI to Cognitive AI</u>. International Journal of 
 Network Dynamics and Intelligence. 2023.</font></p>
+<p class="MsoListParagraph" style="text-indent: -.25in; line-height: 115%; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt">
+<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;293.</font></span><font face="Times New Roman" size="4">&nbsp; 
+Zitong Yu, Yuming Shen, Jingang Shi, Hengshuang Zhao, Yawen Cui, Jiehua Zhang, 
+Philip Torr <span lang="en-us">&amp;</span> <b>Guoying Zhao</b>. PhysFormer++: 
+Facial Video-based Physiological Measurement with SlowFast Temporal Difference 
+Transformer. International Journal on Computer Vision (IJCV), 2023. (3)</font></p>
 <p class="MsoPlainText" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; text-align: justify; text-justify: inter-ideograph; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">&nbsp;292. Tuomas Varanka, Wei Peng, <b>
 Guoying Zhao</b>. <u>Learnable Eulerian Dynamics for Micro-Expression Action 
