--- a/teammembers.htm
+++ b/teammembers.htm
@@ -188,7 +188,8 @@ span.contentpasted0
 		<font face="Times New Roman">(Central South University): Jan. 2022-Dec. 
 		2022</font></td>
 		<td width="223" height="0" align="center" valign="top">
-		<font face="Times New Roman">Mr. Sheraz Khan </font></td>
+		<b>
+		<font face="Times New Roman">Mr. Sheraz Khan </font></b></td>
 		<td width="222" height="0" align="center" valign="top">
 		&nbsp;</td>
 		<td width="222" height="0" align="center" valign="top">
@@ -226,7 +227,7 @@ span.contentpasted0
 		&nbsp;</td>
 	</tr>
 	</table>
-<p class="title" style="line-height: 150%; margin-top:1cm">
+<p class="title" style="margin-top:1cm; margin-bottom:9pt">
 <font size="4"><b>Past members:</b></font></p>
 <table border="0" width="40%">
 	<tr>
@@ -274,35 +275,73 @@ span.contentpasted0
 	</tr>
 	<tr>
 		<td width="243" height="0" align="center" valign="top">
-		&nbsp;</td>
+		<img alt="Xin Liu" sizes="print 74px,119px" src="https://scholar.googleusercontent.com/citations?view_op=view_photo&user=xHkC5U0AAAAJ&citpid=6" id="gsc_prf_pup-img" srcset="https://scholar.googleusercontent.com/citations?view_op=view_photo&amp;user=xHkC5U0AAAAJ&amp;citpid=6 119w,https://scholar.googleusercontent.com/citations?view_op=medium_photo&amp;user=xHkC5U0AAAAJ&amp;citpid=6 238w" width="142" height="149"></td>
 		<td height="0" align="center" valign="top" width="397">
-		　</td>
+		　<b><span lang="en-us">Dr. Xin Liu</span></b><p>&nbsp;</p>
+		<p style="text-align: center"><span lang="en-us">Associate </span>
+		Professor</p>
+		<p style="text-align: center">Lappeenranta-Lahti University of Technology 
+	(LUT), Finland</td>
+	</tr>
+	<tr>
+		<td width="243" height="0" align="center" valign="top">
+		<img border="0" src="Xiaobai.jpg" width="136" height="172"></td>
+		<td height="0" align="center" valign="top" width="397">
+		&nbsp;<p style="text-align: center"><b>Dr. Xiaobai L<span lang="en-us">i</span></b></p>
+		<p>&nbsp;</p>
+		<p style="text-align: center"><span lang="en-us">Assistant Professor </span>
+		</p>
+		<p style="text-align: center"><span lang="en-us">CMVS, University of 
+		Oulu</span></td>
+	</tr>
+	<tr>
+		<td width="243" height="84" align="center" valign="top">
+		<img alt="Quang Nhật Võ" sizes="print 80px,128px" src="https://scholar.googleusercontent.com/citations?view_op=view_photo&user=j0e6Vi4AAAAJ&citpid=3" id="gsc_prf_pup-img0" srcset="https://scholar.googleusercontent.com/citations?view_op=view_photo&amp;user=j0e6Vi4AAAAJ&amp;citpid=3 128w,https://scholar.googleusercontent.com/citations?view_op=medium_photo&amp;user=j0e6Vi4AAAAJ&amp;citpid=3 256w" width="150" height="153"></td>
+		<td height="84" align="center" valign="top" width="397">
+		&nbsp;<p style="text-align: center"><b><span lang="en-us">Dr. Quang 
+	Nhat V</span>o</b></p>
+		<p style="text-align: center">&nbsp;</p>
+		<p style="text-align: center">AI scientist </p>
+		<p style="text-align: center">Silo.AI<span lang="en-us">, Helsinki</span></td>
+	</tr>
+	<tr>
+		<td width="243" height="84" align="center" valign="top">
+		<img alt="Yingyue Xu" sizes="print 80px,128px" src="https://scholar.googleusercontent.com/citations?view_op=view_photo&user=K2Jdab0AAAAJ&citpid=3" id="gsc_prf_pup-img1" srcset="https://scholar.googleusercontent.com/citations?view_op=view_photo&amp;user=K2Jdab0AAAAJ&amp;citpid=3 128w,https://scholar.googleusercontent.com/citations?view_op=medium_photo&amp;user=K2Jdab0AAAAJ&amp;citpid=3 256w" width="148" height="150"></td>
+		<td height="84" align="center" valign="top" width="397">
+		<b>Dr. Yingyue Xu</b><p>&nbsp;</p>
+		<p style="text-align: center"><span lang="zh-cn">Postdoctoral researcher</span></p>
+		<p>Zhuhai 
+	Innovation Institute, Fudan University</td>
+	</tr>
+	<tr>
+		<td width="243" height="84" align="center" valign="top">
+		<img alt="Jingang Shi" sizes="print 55px,88px" src="https://scholar.googleusercontent.com/citations?view_op=view_photo&user=N2ftCz4AAAAJ&citpid=3" id="gsc_prf_pup-img2" srcset="https://scholar.googleusercontent.com/citations?view_op=view_photo&amp;user=N2ftCz4AAAAJ&amp;citpid=3 88w,https://scholar.googleusercontent.com/citations?view_op=medium_photo&amp;user=N2ftCz4AAAAJ&amp;citpid=3 176w" width="120" height="169"></td>
+		<td height="84" align="center" valign="top" width="397">
+		&nbsp;<p style="text-align: center"><b>Dr. Jingang Shi</b></p>
+		<p>&nbsp;</p>
+		<p style="text-align: center"><span lang="en-us">Associate 
+	Professor </span></p>
+		<p style="text-align: center">Xi&#39;an Jiaotong University, China</td>
+	</tr>
+	<tr>
+		<td width="243" height="84" align="center" valign="top">
+		<img alt="Xiaopeng HONG (洪晓鹏)" sizes="print 80px,128px" src="https://scholar.googleusercontent.com/citations?view_op=view_photo&user=x3X-qysAAAAJ&citpid=18" id="gsc_prf_pup-img3" srcset="https://scholar.googleusercontent.com/citations?view_op=view_photo&amp;user=x3X-qysAAAAJ&amp;citpid=18 128w,https://scholar.googleusercontent.com/citations?view_op=medium_photo&amp;user=x3X-qysAAAAJ&amp;citpid=18 256w"></td>
+		<td height="84" align="center" valign="top" width="397">
+		<b><span lang="zh-cn">Dr</span>. Xiaopeng Hong</b><p>&nbsp;</p>
+		<p style="text-align: center"><span lang="en-us">Professor </span></p>
+		<p style="text-align: center"><span lang="en-us">&nbsp;</span>Harbin 
+		Institute of Technology</td>
+	</tr>
+	<tr>
+		<td width="243" height="84" align="center" valign="top">
+		<img src="https://media-cdn.oulu.fi/styles/large/s3/images/researcher-photo-56999-Huang.jpg?itok=oMdKcyAt" jsaction="load:XAeZkd;" jsname="HiaYvf" class="n3VNCb KAlRDb" alt="Xiaohua Huang | University of Oulu" data-noaft="1" style="width: 130px; height: 127px; margin: 0px"></td>
+		<td height="84" align="center" valign="top" width="397">
+		<b>Dr. Xiaohua Huang</b><p>&nbsp;</p>
+		<p style="text-align: center">Professor</p>
+		<p>Nanjing Institute of Technology, China</td>
 	</tr>
 	</table>
 <ul>
-	<li>
-	<p class="title" style="line-height: 150%; "><span lang="en-us">Dr. Xin Liu, Associate </span>Professor, Lappeenranta-Lahti University of Technology 
-	(LUT), Finland</p></li>
-	<li>
-	<p class="title" style="line-height: 150%; ">Dr. Xiaobai L<span lang="en-us">i, Assistant Professor of CMVS, Oulu</span></p></li>
-	<li>
-	<p class="title" style="line-height: 150%; "><span lang="en-us">Dr. Quang 
-	Nhat V</span>o<span lang="zh-cn">, </span>AI scientist in Silo.AI<span lang="en-us">, Helsinki</span></p></li>
-	<li>
-	<p class="title" style="line-height: 150%; ">Dr. Yingyue Xu<span lang="zh-cn">,
-	</span>Zhuhai 
-	Innovation Institute, Fudan University</p></li>
-	<li>
-	<p class="title" style="line-height: 150%; ">Dr. Jingang Shi<span lang="zh-cn">,
-	</span><span lang="en-us">Associate 
-	Professor of </span>Xi&#39;an Jiaotong University, China</p></li>
-	<li>
-	<p class="title" style="line-height: 150%">Adj. Prof. Xiaopeng Hong<span lang="zh-cn">,
-	</span><span lang="en-us">Professor 
-	of </span>Xi&#39;an Jiaotong University, China</p></li>
-	<li>
-	<p class="title" style="line-height: 150%">Dr. Xiaohua Huang, Professor 
-	of Nanjing Institute of Technology, China</p></li>
 	<li>
 	<p class="title" style="line-height: 150%">Mr. Hamza Zair, Software Engineer<span lang="zh-cn">,
 	</span>Elektrobit (EB), Finland</p></li>
