--- a/main_experience.htm
+++ b/main_experience.htm
@@ -51,7 +51,7 @@ Position:</font></b></p>
 	</li>
 	<li>
 	<p style="text-align: left; margin-bottom:0cm; line-height:150%">
-	<font size="4">2022.09 ¨C, Visiting Professor, CNS Lab, Stanford University.</font></p>
+	<font size="4">2022.09 -, Visiting Professor, CNS Lab, Stanford University.</font></p>
 	</li>
 	<li>
 	<p style="text-align: left; margin-bottom:0.5cm; line-height:150%"><font size="4">2010.09 -,
