--- a/honors_awards.htm
+++ b/honors_awards.htm
@@ -222,8 +222,8 @@ Second place on Chalearn single-modal face anti-spoofing attack detection
 challenge @ CVPR 2020.</font></span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman">
-<font size="4">-- 2nd Place Scheme on Action Recognition Track of ECCV 2020 
-VIPriors Challenges (88.31%).</font></span></p>
+<font size="4">-- 2nd Place on Action Recognition Track of ECCV 2020 
+VIPriors Challenges.</font></span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <span style="font-family: Times New Roman"><font size="4">-- </font> </span>
 <font size="4">
