--- a/personal.htm
+++ b/personal.htm
@@ -28,6 +28,8 @@ h3
 	font-family:"Times New Roman","serif";
 	}
 .style1 {font-family: "Times New Roman", Times, serif}
+span.contentpasted0
+	{}
 -->
 </style>
 </head>
@@ -163,24 +165,15 @@ text-indent:-.38in;text-align:left;direction:ltr;unicode-bidi:embed;vertical-ali
 baseline;mso-line-break-override:restrictions;punctuation-wrap:simple">
 		<p style="margin-top: 24px; margin-bottom: 24px">
 		<img border="0" src="202109_Group.jpg" width="1128" height="754"></p>
-		<p style="margin-top: 24px; margin-bottom: 24px">
-		<font face="Times New Roman">
-		<u><b>Open positions</b></u>: Postdoctoral researchers, PhD students, Master thesis 
-		workers.</font></p>
-		<p><font face="Times New Roman">Call for Postdoctoral Researcher for 
-		Machine Vision and Signal Analysis: </font></p>
-		<p><span lang="EN-US" style="font-family: Times New Roman">
-		<a style="color: #0563C1; text-decoration: underline; text-underline: single" href="https://rekry.saima.fi/certiahome/open_job_view.html?did=5600&lang=en&id=000012022&jc=1">
-		https://rekry.saima.fi/certiahome/open_job_view.html?did=5600&amp;lang=en&amp;id=000012022&amp;jc=1</a></span><font face="Times New Roman">, 
-		Deadline: <b>Nov. 30, 2021</b>.</font></p>
-		<p><font face="Times New Roman">Call for Doctoral Student for Machine 
-		Vision and Signal Analysis: </font></p>
-		<p><span lang="EN-US" style="font-family: Times New Roman">
-		<a style="color: #0563C1; text-decoration: underline; text-underline: single" href="https://rekry.saima.fi/certiahome/open_job_view.html?did=5600&lang=en&id=000012022&jc=1">
-		https://rekry.saima.fi/certiahome/open_job_view.html?did=5600&amp;lang=en&amp;id=000012022&amp;jc=1</a></span><font face="Times New Roman">, 
-		Deadline: <b>Nov. 30, 2021</b>.</font></p>
 		<p style="margin-top: 24px; margin-bottom: 24px"><u><b>
 		<font face="Times New Roman">NEWS:</font></b></u></p>
+		<p style="margin-top: 24px; margin-bottom: 24px"><span lang="en-us"><u>
+		<font face="Times New Roman">2023.03:</font></u></span><font face="Times New Roman"><span lang="en-us"> 
+		Call for participation and submissions: </span>
+		<a href="https://cv-ac.github.io/MiGA2023/">1st&nbsp;Workshop &amp; Challenge on 
+		Micro-gesture Analysis for Hidden Emotion understanding (MiGA)</a>
+		<span lang="en-us">with <a target="_blank" href="https://ijcai-23.org/">
+		IJCAI 2023</a>. </span></font></p>
 		<p style="margin-top: 24px; margin-bottom: 24px">
 		<font face="Times New Roman">2021.06: Muzammil recently won the Tauno 
 		T&ouml;nning Foundation Grant.</font></p>
