--- a/professional_activities.htm
+++ b/professional_activities.htm
@@ -178,9 +178,10 @@ AAIA Fellow</span></u></b></font></p>
 <font size="4"><span lang="en-us">--</span> <u><b><font face="Times New Roman">
 <span lang="en-us">2022-present, </span>AAIA Women Committee members</font></b></u></font></p>
 <p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
-<font size="4">-- <b><u><font face="Times New Roman">2022.11-present, member of 
-IEEE Signal Processing Society (SPS), Machine Learning for Signal Processing (MLSP) 
-Technical Committee (MLSP TC).</font></u></b></font></p>
+-- <font face="Times New Roman" size="4"><u> <b>2023.03-</b></u><b><u>present, 
+vice chair of the award subcommittee of 
+IE</u></b></font><font face="Times New Roman"><u><b><font size="4">EE Signal Processing Society (SPS), Machine Learning for Signal Processing (MLSP) 
+Technical Committee (MLSP TC).</font></b></u></font></p>
 <p style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt" class="MsoListParagraph">
 <font size="4"><span lang="en-us">--</span> <b><font face="Times New Roman">
 Selected to </font>
@@ -248,13 +249,12 @@ Automatic Face and Gesture Recognition 2017 (FG 2017); </font> </span><span clas
 <font size="4">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
 --</span></font><span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US"><font size="4">&nbsp;</font></span><span lang="EN-US"><u><b><font size="4">Editorial Board 
-Member: </font> </b></u> </span><u><font size="4">Pattern Recognition 
-(</font><span lang="EN-US"><font size="4">JUFO 
-3, </font> </span><font size="4">2016-); </font>
-<span lang="EN-US">
-<font size="4">IEEE Transactions on Circuits and Systems for Video Technology (JUFO 2, 
+Member: </font> </b></u> </span><u><font size="4">Pattern Recognition (JUFO 
+3, 2016-); IEEE Trans. on Multimedia (JUFO 2, 2022-2024); IEEE Transactions on Circuits and Systems for Video Technology (JUFO 2, 
 2018.01-2021.12); Image and Vision Computing Journal (JUFO 2, 2015.09-); Journal 
-of Electronic Imaging (JUFO 1, 2017.09-2019.12).</font></span></u></p>
+of Electronic Imaging (JUFO 1, 2017.09-2019.12); Frontiers in Psychology (JUFO 
+1, 2020-2024); International Journal of Network Dynamics and Intelligence 
+(2022-).</font></u></p>
 <p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt">
 <a name="OLE_LINK139"><font size="4">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
@@ -332,11 +332,14 @@ Nixon) Special issue on New Advances in Video-based Gait Analysis and
 Applications: Challenges and Solutions,<b> </b>IEEE Transactions on Systems, 
 Man, and Cybernetics - Part B: Cybernetics, 2009-2010. </font> </span></p>
 <p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt; text-indent:-21.0pt">
-<font size="4">--&nbsp;<span style="font-family: Times New Roman; font-style:normal; font-variant:normal; font-weight:700; text-decoration:underline">Co-chair of 1<span lang="en-us">8</span> international workshops</span><span style="font-family: Times New Roman; font-style:normal; font-variant:normal; font-weight:normal">: </span>
-<span style="line-height: 125%">2nd Workshop on ¡°What¡¯s Next in Affect Modelling?¡± 
+<font size="4">--&nbsp;<span style="font-family: Times New Roman; font-style:normal; font-variant:normal; font-weight:700; text-decoration:underline">Co-chair 
+of 20 international workshops</span><span style="font-family: Times New Roman; font-style:normal; font-variant:normal; font-weight:normal">: </span>
+<span style="line-height: 125%">The 1st Challenge Workshop on Micro-gesture 
+Analysis for Hidden Emotion Un-derstanding (MiGA) with IJCAI 2023; Chinese-MER 
+2023: Chinese Multimodal Emotion Recognition Challenge with ACM MM 2023; 2n</span></font><span style="line-height: 125%"><font size="4">d Workshop on ¡°What¡¯s Next in Affect Modelling?¡± 
 with ACII 2022; ¡°The 2nd Challenge Workshop on Remote Physiological Signal 
 Sensing (RePSS)¡± with ICCV 2021; ¡°Multimodal Sentiment Analysis in Real-life 
-Media Challenge and Workshop¡± with ACM Multimedia 2021; IEEE BigMM Grand Challenge 2020 on Touchles</span></font><span style="line-height: 125%"><font size="4">s 
+Media Challenge and Workshop¡± with ACM Multimedia 2021; IEEE BigMM Grand Challenge 2020 on Touchles</font></span><span style="line-height: 125%"><font size="4">s 
 Technologies; ''C</font></span><font size="4" face="Times New Roman">VPM 2020: 
 International Workshop and Challenge on Computer Vision for Physiological 
 Measurement'' with CVPR 2020; W</font><font size="4"><span lang="EN-US" style="line-height: 125%; ">orkshop on &quot;Automatic Face Analytics for Human Behavior Understanding (FaceHUB 
