--- a/teammembers.htm
+++ b/teammembers.htm
@@ -184,9 +184,7 @@ span.contentpasted0
 	</tr>
 	<tr>
 		<td height="0" align="center" valign="top" width="225">
-		　<font face="Times New Roman"><b>Mr. Haotian LIU</b></font><p style="text-align: center">
-		<font face="Times New Roman">(Central South University): Jan. 2022-Dec. 
-		2022</font></td>
+		　<font face="Times New Roman"><b>Mr. Haotian LIU</b></font></td>
 		<td width="223" height="0" align="center" valign="top">
 		<b>
 		<font face="Times New Roman">Mr. Sheraz Khan </font></b></td>
@@ -204,7 +202,7 @@ span.contentpasted0
 	</tr>
 	<tr>
 		<td height="0" align="center" valign="top" width="209">
-		&nbsp;</td>
+		<img border="0" src="Qing.jpg" width="132" height="165"></td>
 		<td height="0" align="center" valign="top" width="225">
 		　</td>
 		<td height="0" align="center" valign="top" width="225">
@@ -216,7 +214,10 @@ span.contentpasted0
 	</tr>
 	<tr>
 		<td height="0" align="center" valign="top" width="209">
-		&nbsp;</td>
+		<b><font face="Times New Roman">Prof</font></b><font face="Times New Roman"><b>. </b></font>
+		<b><font face="Times New Roman">Qing Liu</font></b><p style="text-align: center">
+		<font face="Times New Roman">(Central South University): Feb. 2023-Dec. 
+		202</font>3&nbsp;</td>
 		<td height="0" align="center" valign="top" width="225">
 		　</td>
 		<td height="0" align="center" valign="top" width="225">
